WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
128415
[WK2] The WebPageProxy's copy of pageScaleFactor is not update when the scale is changed from the viewport configuration
https://bugs.webkit.org/show_bug.cgi?id=128415
Summary
[WK2] The WebPageProxy's copy of pageScaleFactor is not update when the scale...
Benjamin Poulain
Reported
2014-02-07 16:49:01 PST
[WK2] The WebPageProxy's copy of pageScaleFactor is not update when the scale is changed from the viewport configuration
Attachments
Patch
(1.34 KB, patch)
2014-02-07 16:50 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-02-07 16:50:45 PST
Created
attachment 223519
[details]
Patch
Benjamin Poulain
Comment 2
2014-02-07 17:05:53 PST
Comment on
attachment 223519
[details]
Patch Clearing flags on attachment: 223519 Committed
r163668
: <
http://trac.webkit.org/changeset/163668
>
Benjamin Poulain
Comment 3
2014-02-07 17:05:55 PST
All reviewed patches have been landed. Closing bug.
Benjamin Poulain
Comment 4
2014-02-07 18:20:29 PST
***
Bug 128414
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug