[WK2] The WebPageProxy's copy of pageScaleFactor is not update when the scale is changed from the viewport configuration https://bugs.webkit.org/show_bug.cgi?id=128415

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-02-07
Reviewed by Simon Fraser.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::viewportConfigurationChanged):
The scale needs to be updated through WebPage::scalePage().


Canonical link: https://commits.webkit.org/146437@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163668 268f45cc-cd09-0410-ab3c-d52691b4dbfc